--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 	</head>
 	<body>
 		<main class="container">
-			<div>A</div>
-			<div>B</div>
-			<div>C</div>
+			<div id="a">A</div>
+			<div id="b">B</div>
+			<div id="c">C</div>
 			<div>D</div>
-			<div>E</div>
 		</main>
 	</body>
 </html>
