--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		<main class="container">
-			<div id="a">A</div>
 			<div id="b">B</div>
+			<div id="a"><h1>A</h1></div>
 			<div id="c">C</div>
 			<div>D</div>
 		</main>
